# llm-presentation

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agents/skills/coding-style/: SKILL.md
.agents/skills/export-coding-session/: SKILL.md  next-index.sh  redaction-scan.sh
.agents/skills/export-transcript/: SKILL.md  next-index.sh  redaction-scan.sh
.agents/skills/retrieving-context/: SKILL.md
.agents/skills/setting-up-rag/: CHUNKING.md  RETRIEVAL.md  SETUP.md  SKILL.md  TUNING.md
.agents/skills/setting-up-vcs/: SKILL.md
.agents/skills/update-agent-permissions/: SKILL.md
.agents/skills/updating-docs/: SKILL.md
.agents/skills/vcs/: COMMITS.md  INTEGRATE.md  ISOLATE.md  SKILL.md
.claude/: settings.json
.codex/: hooks.json
.cursor/: hooks.json
.gemini/: settings.json
docs/: README.md
docs/archive/20260611/: brain_dump_20260611.vtt  brain_dump_20260611_distilled.txt  llmos_5_minute_outline.md
docs/coding-sessions/2026-06-10/: 0000-codex-vcs-guardrails.md
docs/subtitles/: 0001_intro.txt  0001_intro.vtt  README.md  brain_dump_20260611.vtt  presentation_test.vtt
prototypes/20260613/: NOTES.md
prototypes/20260613/web/: README.md  (+5 more)
scripts/: jj-cleanup.sh  trtllm-wave7.yaml
src/: README.md
src/asr/: README.md  __init__.py  cuda_env.py  interactive_tui.py  media.py  model_cache.py  runtime_env.py  speech_speed.py  transcribe_vtt.py
web/: README.md  index.html  package-lock.json  package.json  preview.html  tsconfig.json  vite.config.ts
web/scripts/: gen-waveform.py
web/src/: main.ts  preview.ts  style.css  vite-env.d.ts
(+93 files in other folders)
