[project]
name = "llm-presentation-asr"
version = "0.1.0"
description = "Local CUDA ASR pipeline for generating WebVTT subtitles and plain text transcripts from video or audio files."
readme = "docs/research/2026-06-10/0000-open-source-asr-vtt-subtitles.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "faster-whisper>=1.1.1",
  "huggingface-hub>=0.33.0",
  "nemo-toolkit[asr]>=2.7.3",
  "nvidia-cublas-cu12>=12.4.5.8",
  "nvidia-cudnn-cu12>=9.1.0.70",
  "whisperx>=3.8.6",
]

[project.scripts]
asr-download-model = "asr.model_cache:main"
asr-speech-speed = "asr.speech_speed:main"
asr-vtt = "asr.transcribe_vtt:main"

[dependency-groups]
dev = [
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asr"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
